<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context="thesis.jager.indoorpositioning.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"            >

            <LinearLayout
                android:id="@+id/panel_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:visibility="gone"
                >

                <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logging_in"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/userdata_textsize"
                />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/userdata_textsize"
                />

            <EditText
                android:id="@+id/edit_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                />

            <CheckBox
                android:id="@+id/check_savecreds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/savecreds"
                />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_margin="10dp"
                    />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
