<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thesis.jager.indoorpositioning.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/panel_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:visibility="gone"
                >

                <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_in_progress"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/required"
                android:textSize="@dimen/userdata_textsize"
                android:textColor="@color/colorRed"
                android:layout_marginBottom="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="@dimen/userdata_textsize"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star"
                    android:textSize="@dimen/userdata_textsize"
                    android:textColor="@color/colorRed"
                    android:layout_marginLeft="3dp"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="@dimen/userdata_textsize"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star"
                    android:textSize="@dimen/userdata_textsize"
                    android:textColor="@color/colorRed"
                    android:layout_marginLeft="3dp"
                    />

            </LinearLayout>



            <EditText
                android:id="@+id/edit_reg_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/userdata_textsize"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star"
                    android:textSize="@dimen/userdata_textsize"
                    android:textColor="@color/colorRed"
                    android:layout_marginLeft="3dp"
                    />

            </LinearLayout>



            <EditText
                android:id="@+id/edit_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fname"
                android:textSize="@dimen/userdata_textsize"
                />

            <EditText
                android:id="@+id/edit_reg_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lname"
                android:textSize="@dimen/userdata_textsize"
                />

            <EditText
                android:id="@+id/edit_reg_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />




            <Button
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:layout_margin="10dp"
                />

            <ProgressBar
                android:id="@+id/progress_registration"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
